formatted spacing, fixed weather-current margins

--- a/src/app/weather-current/weather-current.component.scss
+++ b/src/app/weather-current/weather-current.component.scss
@@ -13,6 +13,12 @@
     width: 100%;
     height: 100%;
 
+    &__wrapper {
+        display: block;
+        height: 100%;
+        width: 100%;
+    }
+
     &__display {
         display: flex;
         flex-direction: column;
