--- a/src/assets/scss/_line-chart.scss
+++ b/src/assets/scss/_line-chart.scss
@@ -7,7 +7,7 @@
       justify-content: center;
       align-items: center;
       padding: 2rem 0;
-      margin: 3rem 0;
+      margin: 1rem 0 !important;
     }
   
   }
